[package]
name = "pqclean"
version = "0.1.0"
edition = "2021"
links="dilithium2"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
libc = "0.2"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
